# ScratchScript

./: .gitignore  .replit  README.md  TODO.md  pyproject.toml
PyScratch/: README.md  pyproject.toml
PyScratch/PyScratch/: asset.py  broadcast.py  extension.py  monitor.py  mutation.py  primitives.py  target.py  variable.py
PyScratch/src/PyScratch/: asset.py  block.py  broadcast.py  comment.py  monitor.py  primitives.py  target.py  variable.py
PyScratch/src/scratch_project/: asset.py  broadcast.py  monitor.py  target.py  variable.py
ScratchScript/: example2.txt  example_tokens.md  fetures.md  function_store_shema.md  motion_opcodes.txt  pyproject.toml
ScratchScript/ScratchScript/function_specs/: MinEventsBlocks.sb3  MotionBlocks.raw.json  VariablesBlocks.raw.json  VariablesBlocks.sb3  hashes.json
ScratchScript/ScratchScript/lang_compiler/: README.md  __init__.py  lang_code.py  lang_extract.py  lang_function.py  lang_types.py
ScratchScript/ScratchScript/lang_compiler/modules/: data.py  event.py
ScratchScript/ScratchScript/lang_parser/: __init__.py  lang_parser.py
ScratchScript/function_specs/: LooksBlocks.fnspec.json  LooksBlocks.sb3  MotionBlocks.fnspec.json
ScratchScript/src/: lang_extract.py  lang_parser.py
ScratchScript/src/ScratchScript/: lang_code.py  lang_extract.py  lang_parser.py  lang_types.py  main.py
ScratchScript/src/ScratchScript/function_specs/: LooksBlocks.fnspec.json  LooksBlocks.raw.json  MotionBlocks.fnspec.json  MotionBlocks.raw.json  MotionBlocks.sb3  VariablesBlocks.fnspec.json  VariablesBlocks.raw.json  hashes.json
ScratchScript/src/ScratchScript/lang_compiler/: README.md  __init__.py  lang_code.py  lang_extract.py  lang_function.py  lang_types.py  motion_functions.py
ScratchScript/src/ScratchScript/lang_parser/: __init__.py  lang_lexer.py  lang_parser.py  lang_types.py
ScratchScript/tools/: reganerate_spec.py
block_sb3/: README.md  pyproject.toml
block_sb3/block_sb3/: extract_types.py
block_sb3/src/: load.py  main.py
block_sb3/src/block_sb3/: __init__.py  __main__.py  extract_types.py  load.py  main.py
lang/: example.txt  example2.txt  (+5 more)
(+41 files in other folders)
