[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ScratchScript"
description = "Compiler for ScratchScript"
version = "0.0.0"
dependencies = [
    "rply",
    "msgspec",
    "PyScratch @ file://localhost/Users/oparm/PycharmProjects/PyScratchScript/PyScratch"
]
requires-python = ">= 3.11"
readme = "README.md"

[project.optional-dependencies]
gen_spec = [
    "block_sb3 @ file://localhost/Users/oparm/PycharmProjects/PyScratchScript/block_sb3"
]

[project.urls]
Repository = "https://github.com/Mio-coder/PyScratch.git"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']
indent-width = 4
