[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "block_sb3"
description = "program to extract scratch blocks specification from .sb3 files"
version = "0.0.0"
dependencies = [
    "msgspec"
]
requires-python = ">= 3.11"
readme = "README.md"

[project.urls]
Repository = "https://github.com/Mio-coder/PyScratch.git"

[project.scripts]
block-sb3 = "main:main"